--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.4",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "jest": "^29.6.4",
